<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>SalesforcetoDatahub</groupId>
	<artifactId>SalesforcetoDatahub</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<name>EnhacePortal</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<serenity.version>2.1.1</serenity.version> <!-- https://bintray.com/serenity/maven/serenity-core/ -->
		<serenity.maven.version>2.1.1</serenity.maven.version>
		<serenity.cucumber.version>1.9.45</serenity.cucumber.version> <!-- https://bintray.com/serenity/maven/serenity-cucumber/ -->
		<extentreports.version>3.1.2</extentreports.version>
		<testclasses></testclasses>
		<parallel.forkCount>3</parallel.forkCount>
		<parallel.threadCount>3</parallel.threadCount>
	</properties>

	<!-- Define the Bintray repos for convenience -->
	<repositories>
		<repository>
			<id>serenity</id>
			<name>bintray</name>
			<url>http://dl.bintray.com/serenity/maven</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>serenity</id>
			<name>bintray-plugins</name>
			<url>http://dl.bintray.com/serenity/maven</url>
		</pluginRepository>
	</pluginRepositories>

	<dependencies>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-core</artifactId>
			<version>${serenity.version}</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-rest-assured</artifactId>
			<version>${serenity.version}</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-junit</artifactId>
			<version>${serenity.version}</version>
		</dependency>
		<!-- <dependency> <groupId>net.serenity-bdd</groupId> <artifactId>serenity-rest-assured</artifactId> 
			<version>${serenity.version}</version> </dependency> -->
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-cucumber</artifactId>
			<version>${serenity.cucumber.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.codehaus.groovy</groupId>
			<artifactId>groovy-all</artifactId>
			<version>1.8.6</version>
		</dependency>
			<dependency>
                     <groupId>Impala.ImpalaJDBC42</groupId>
                     <artifactId>ImpalaJDBC42</artifactId>
                     <version>2.6.17.1020</version>
              </dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.5.4</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.lambdaj</groupId>
			<artifactId>lambdaj</artifactId>
			<version>2.3.3</version>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>1.7.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.github.javafaker</groupId>
			<artifactId>javafaker</artifactId>
			<version>0.15</version>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>json-schema-validator</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20190722</version>
		</dependency>
		<dependency>
    		<groupId>com.googlecode.json-simple</groupId>
    		<artifactId>json-simple</artifactId>
    		<version>1.1.1</version>
		</dependency>		
		<dependency>
			<groupId>com.jayway.jsonpath</groupId>
			<artifactId>json-path</artifactId>
			<version>2.4.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>4.1.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>4.1.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.16.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.16.0</version>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<version>3.0.0</version>
		</dependency>
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>5.0.3</version>
		</dependency>
		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc8</artifactId>
			<version>21.1.0.0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.vertica.jdbc</groupId>
			<artifactId>vertica-jdbc</artifactId>
			<version>10.0.1-0</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>7.1.0</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.walterjwhite.java.dependencies/ashot -->
		<dependency>
			<groupId>com.walterjwhite.java.dependencies</groupId>
			<artifactId>ashot</artifactId>
			<version>0.0.17</version>
			<type>pom</type>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.pdfbox/pdfbox -->
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>2.0.25</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-email</artifactId>
			<version>1.5</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>smtp</artifactId>
			<version>1.4.4</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>mailapi</artifactId>
			<version>1.4.4</version>
		</dependency>
		<dependency>
			<groupId>com.sun.mail</groupId>
			<artifactId>javax.mail</artifactId>
			<version>1.6.2</version>
		</dependency>
		<dependency>
			<groupId>com.aventstack</groupId>
			<artifactId>extentreports</artifactId>
			<version>${extentreports.version}</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
				<configuration>
					<!-- skip the surefire tests as we have included the class files and 
						config in failsafe plugin -->
					<skip>false</skip>
					<!-- <forkcount>5</forkcount> <reuseforks>true</reuseforks> -->
					<!-- <parallel>classes</parallel> <threadCount>6</threadCount> -->
					<!-- <parallel>classes</parallel> <threadCount>6</threadCount> -->
					<!-- <testFailureIgnore>true</testFailureIgnore> -->
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.22.0</version>
				<configuration>
					<!-- Include the class.java file name during run time at command prompt 
						as mentioned below clean verify -DEnv=${Env} -Dtestclasses="**/MCClient*.java" 
						verify serenity:aggregate -->
					<includes>
						<include>${testclasses}</include>
					</includes>
					<!-- <forkCount>${parallel.forkCount}</forkCount> <reuseForks>true</reuseForks> 
						<parallel>classes</parallel> <threadCount>${parallel.threadCount}</threadCount> 
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine> -->
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>net.masterthought</groupId>
				<artifactId>maven-cucumber-reporting</artifactId>
				<version>5.0.0</version>

				<executions>
					<execution>
						<id>execution</id>
						<phase>verify</phase>
						<goals>
							<goal>generate</goal>
						</goals>
						<configuration>
							<projectName>baseline</projectName> <!-- Replace with project name -->
							<outputDirectory>target/cucumber-reports/advanced-reports</outputDirectory>
							<cucumberOutput>target/cucumber-reports/cucumber.json</cucumberOutput>
							<buildNumber>1</buildNumber>
							<parallelTesting>false</parallelTesting>
							<skip>false</skip>
							<inputDirectory>${project.build.directory}/cucumber-reports</inputDirectory>
							<jsonFiles> <!-- supports wildcard or name pattern -->
								<param>**/*.json</param>
							</jsonFiles> <!-- optional, defaults to outputDirectory if not specified -->
							<classificationDirectory>${project.build.directory}/cucumber-reports</classificationDirectory>
							<checkBuildResult>false</checkBuildResult>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<fork>true</fork>
					<!-- <executable>C:\Program Files\Java\jdk1.8.0_161\bin\javac.exe</executable> -->
				</configuration>
			</plugin>

			<plugin>
				<groupId>net.bdd.maven.plugins</groupId>
				<artifactId>maven-plugin</artifactId>
				<version>${maven.version}</version>
			</plugin>
		</plugins>
	</build>
</project>
